src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_p4b2_terminal_100_html.snap
---
source: src/regression.rs
expression: html
---
<span style="font-weight:bold">┌</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">┐</span>
<span style="font-weight:bold">│</span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold">D</span><span style="font-weight:bold">R</span><span style="font-weight:bold">O</span><span style="font-weight:bold">I</span><span style="font-weight:bold">D</span><span style="font-weight:bold">:</span><span style="font-weight:bold"> </span><span style="font-weight:bold">p</span><span style="font-weight:bold">4</span><span style="font-weight:bold">b</span><span style="font-weight:bold">2</span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold">│</span>
<span style="font-weight:bold">└</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">┘</span>
┌──┐
◉<span style="font-weight:bold"> </span><span style="font-weight:bold">◉</span><span style="font-weight:bold">…</span>
0%0%
│  │
│  │
│  │
◉ ◉│
0%0%
│  │
│  │
│  │
│  │
│  │
│  │
│○○│
│……│
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press &#39;l&#39; to load. | Scale: 1.0 | Orientation: Portrait                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
