src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_p8s8_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                            DROID: p8s8                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────┐
│ Fad…
▯○○○○○
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
│    │
│    │
□□□□□□
………………
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
└────┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded p8s8 | Renders degraded at 100 cols — use ≥ 274 cols or reduce scale | Scale: 1.0 | Orienta│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
