src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_p8s8_terminal_100_html.snap
---
source: src/regression.rs
expression: html
---
<span style="font-weight:bold">┌</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">┐</span>
<span style="font-weight:bold">│</span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold">D</span><span style="font-weight:bold">R</span><span style="font-weight:bold">O</span><span style="font-weight:bold">I</span><span style="font-weight:bold">D</span><span style="font-weight:bold">:</span><span style="font-weight:bold"> </span><span style="font-weight:bold">p</span><span style="font-weight:bold">8</span><span style="font-weight:bold">s</span><span style="font-weight:bold">8</span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold"> </span><span style="font-weight:bold">│</span>
<span style="font-weight:bold">└</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">─</span><span style="font-weight:bold">┘</span>
┌────┐
│<span style="font-weight:bold"> </span><span style="font-weight:bold">F</span><span style="font-weight:bold">a</span><span style="font-weight:bold">d</span><span style="font-weight:bold">…</span>
▯○○○○○
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
▯▯▯▯▯▯
│    │
│    │
□□□□□□
………………
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
└────┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press &#39;l&#39; to load. | <span style="font-weight:bold">R</span><span style="font-weight:bold">e</span><span style="font-weight:bold">n</span><span style="font-weight:bold">d</span><span style="font-weight:bold">e</span><span style="font-weight:bold">r</span><span style="font-weight:bold">s</span><span style="font-weight:bold"> </span><span style="font-weight:bold">d</span><span style="font-weight:bold">e</span><span style="font-weight:bold">g</span><span style="font-weight:bold">r</span><span style="font-weight:bold">a</span><span style="font-weight:bold">d</span><span style="font-weight:bold">e</span><span style="font-weight:bold">d</span><span style="font-weight:bold"> </span><span style="font-weight:bold">a</span><span style="font-weight:bold">t</span><span style="font-weight:bold"> </span><span style="font-weight:bold">1</span><span style="font-weight:bold">0</span><span style="font-weight:bold">0</span><span style="font-weight:bold"> </span><span style="font-weight:bold">c</span><span style="font-weight:bold">o</span><span style="font-weight:bold">l</span><span style="font-weight:bold">s</span><span style="font-weight:bold"> </span><span style="font-weight:bold">—</span><span style="font-weight:bold"> </span><span style="font-weight:bold">u</span><span style="font-weight:bold">s</span><span style="font-weight:bold">e</span><span style="font-weight:bold"> </span><span style="font-weight:bold">≥</span><span style="font-weight:bold"> </span><span style="font-weight:bold">2</span><span style="font-weight:bold">7</span><span style="font-weight:bold">4</span><span style="font-weight:bold"> </span><span style="font-weight:bold">c</span><span style="font-weight:bold">o</span><span style="font-weight:bold">l</span><span style="font-weight:bold">s</span><span style="font-weight:bold"> </span><span style="font-weight:bold">o</span><span style="font-weight:bold">r</span><span style="font-weight:bold"> </span><span style="font-weight:bold">r</span><span style="font-weight:bold">e</span><span style="font-weight:bold">d</span><span style="font-weight:bold">u</span><span style="font-weight:bold">c</span><span style="font-weight:bold">e</span><span style="font-weight:bold"> </span><span style="font-weight:bold">s</span><span style="font-weight:bold">c</span><span style="font-weight:bold">a</span><span style="font-weight:bold">l</span>│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
