src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_x7_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: x7                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐
│ C…
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded x7 | Renders degraded at 100 cols — use ≥ 18 cols or reduce scale | Scale: 1.0 | Orientatio│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
