src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_x7_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: x7                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐
│ C…
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Scale: 1.0 | Orientation: Portrait                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
